--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DB_HOST="mongodb+srv://shahriar:74247427sauROV@cluster0.bv5gf.mongodb.net/CulinaryBiliss"
+DB_HOST="mongodb+srv://shahriar:74247427sauROV@cluster0.bv5gf.mongodb.net/CareFlow"
 PORT=8080
 API_VERSION=v1
